--- a/readme/2.md
+++ b/readme/2.md
@@ -6,3 +6,56 @@
 - @Table(name = "MEMBERS") name 속성을 사용해 엔티티를 MEMBER 테이블에 매핑한다.
 - 만약 name 속성을 생략하면 단순히 클래스 이름을(더 정확히는 엔티티 이름) 테이블 이름으로 사용한다.
 
+- @Id
+- 엔티티 클래스의 필드를 테이블의 기본 키(Primary Key)에 매핑하며 식별자 필드라 한다.
+
+- @Column
+- 필드를 컬럼에 매핑한다.
+
+- 매핑 정보가 없는 필드
+- 매핑 어노테이션을 생략하면 필드 이름을 사용해 컬럼과 매핑을 한다.
+- 만약 DB가 대소문자를 구분한다면 @Column(name="AGE")와 같이 명시적으로 매핑해야 한다.
+
+- 매핑작업을 통해 JPA는 어떤 엔티티를 어떤 테이블에 저장해야 하는지 알 수 있게 되었다.
+
+### JPA 기본 설정 파일 Persistence.xml
+- JPA는 persistence.xml을 사용해 필요한 설정 정보를 관리한다.
+- 설정 파일이 META-INF/persistence.xml 클래스 패스 경로에 있으면 별도의 설정 없이 JPA가 인식한다.
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- xml 네임스페이스와 사용할 버전을 지정 -->
+<persistence xmlns="http://xmlns.jcp.org/xml/ns/persistence" version="2.1">
+    <!-- 영속성 유닛에 고유한 이름을 부여 -->
+    <persistence-unit name="jpabook">
+
+        <properties>
+
+            <!-- 필수 속성 -->
+            <property name="javax.persistence.jdbc.driver" value="org.h2.Driver"/>
+            <property name="javax.persistence.jdbc.user" value="sa"/>
+            <property name="javax.persistence.jdbc.password" value=""/>
+            <property name="javax.persistence.jdbc.url" value="jdbc:h2:tcp://localhost/~/test"/>
+            <property name="hibernate.dialect" value="org.hibernate.dialect.H2Dialect" />
+
+            <!-- 옵션 -->
+            <property name="hibernate.show_sql" value="true" />
+            <property name="hibernate.format_sql" value="true" />
+            <property name="hibernate.use_sql_comments" value="true" />
+            <property name="hibernate.id.new_generator_mappings" value="true" />
+
+            <!--<property name="hibernate.hbm2ddl.auto" value="create" />-->
+        </properties>
+    </persistence-unit>
+
+</persistence>
+```
+
+- hibernate 속성
+- hibernate.dialect: 데이터베이스 방언 설정
+
+#### 데이터 베이스 방언
+- JPA는 특정 데이터베이스에 종속적이지 않은 기술이기 때문에 프로젝트의 데이터베이스를 손쉽게 교체할 수 있다.
+- 다만 데이터베이스마다 조금씩 SQL 문법이 다르다는 문제점이 발생한다.
+- SQL 표준을 지키지 않거나 특정 데이터베이스만의 고유한 문법 혹은 기능을 방언(Dialect)이라 한다
+![2.11](image/2_11.PNG)
+- 개발자는 JPA 표준 문법에 맞춰 JPA를 사용해 개발을 하고 데이터베이스에 의존적인 SQL은 해당 DB의 Dialect가 처리해준다.
