--- a/readme/3.md
+++ b/readme/3.md
@@ -1,3 +1,73 @@
 ### 영속성 관리
 - JPA가 제공하는 기능은 크게 엔티티와 테이블을 매핑하는 설계 부분과 매핑한 엔티티를 실제 사용하는 부분으로 나뉜다.
+- 엔티티 매니저는 엔티티를 저장, 수정, 삭제 조회등 엔티티와 관련된 일을 처리한다.
+- 엔티티를 저장하는 가상의 데이터 베이스로 생각할 수 있다.
+
+#### 엔티티 매니저 팩토리와 엔티티 매니저
+- DB를 하나만 사용하는 애플리케이션은 일반적으로 EntityManagerFactory를 하나만 생성한다.
+```java
+//비용이 굉장히 높은 EntityManagerFactory 생성
+EntityManagerFactory emf = Persistence.createEntityManagerFactory("jpabook");
+```
+- Persistence의 createEntityManagerFactory("jpabook");을 호출하면 META-INF/persistence.xml에 있는 정보를 바탕으로 EntityManagerFactory를 생성한다.
+```xml
+<persistence-unit name="jpabook">
+
+        <properties>
+
+            <!-- 필수 속성 -->
+            <property name="javax.persistence.jdbc.driver" value="org.h2.Driver"/>
+            <property name="javax.persistence.jdbc.user" value="sa"/>
+            <property name="javax.persistence.jdbc.password" value=""/>
+            <property name="javax.persistence.jdbc.url" value="jdbc:h2:tcp://localhost/~/test"/>
+            <property name="hibernate.dialect" value="org.hibernate.dialect.H2Dialect"/>
+
+            <!-- 옵션 -->
+            <property name="hibernate.show_sql" value="true"/>
+            <property name="hibernate.format_sql" value="true"/>
+            <property name="hibernate.use_sql_comments" value="true"/>
+            <property name="hibernate.id.new_generator_mappings" value="true"/>
+
+            <!--<property name="hibernate.hbm2ddl.auto" value="create" />-->
+        </properties>
+    </persistence-unit>
+```
+- EntityManagerFactory를 성공적으로 생성했다면 이제 필요할 때마다 EntityManager를 생성하면 된다.
+```java
+//EntityManager의 생성. 비용의 거의 안든다.
+EntityManager em = emf.createEntityManager();
+```
+
+
+- EntityManagerFactory는 생성할 때 비용이 굉장히 많이 들기 때문에 전체 애플리케이션에서 하나만 생성하여 공유하도록 설계되어 있다.
+- 반면 EntityManager는 생셩 비용이 거의 들지 않는다.
+
+
+- EntityManagerFactory는 여러 스레드가 동시에 접근해도 안전하지만 EntityManager는 여러 스레드가 동시에 접근하면 **동시성 문제**가 발생하기 때문에 **절대로 스레드간 공유를 하면 안된다**
+![3.1](image/3_1.PNG)
+- EntityManager 1은 아직 DB 커넥션을 얻지 않았다.
+    - EntityManager는 DB 연결이 꼭 필요한 시점까지 커넥션을 얻지 않는다.
+    - 보통 트랜잭션을 시작할 때 커넥션을 획득한다.
+    
+- JPA구현체들은 EntityManagerFactory를 생성할 때 커넥션풀을 만드는데 이는 J2SE 환경에서 사용되는 방법이다.
+- J2EE환경에서는 해당 컨테이너(스프링이라면 스프링 컨테이너)가 제공하는 데이터 소스를 사용한다. 
+            
+
+#### 영속성 컨텍스트란?
+- 엔티티를 영구 저장하는 환경
+- EntityManager로 엔티티를 저장 혹은 조회를 할 경우 EntityManager는 영속성 컨텍스트에 엔티티를 보관하고 관리한다.
+```java
+em.persist(member);
+```
+- persist() 메소드는 EntityManager를 사용해 회원 엔티티를 영속성 컨텍스트에 저장한다.
+
+
+- 영속성 컨텍스느는 EntityManager를 생성할 때 하나 만들어지며 EntityManager를 통해 접근, 관리할 수 있다.
+
+#### 엔티티 생명주기
+1. 비영속: 영속성 컨텍스트와 전혀 관계가 없는 상태
+2. 영속: 영속성 컨텍스트에 저장된 상태
+3. 준영속: 영속성 컨텍스트에 저장되었다가 분리가 된 상태
+4. 삭제: 삭제된 상태
+![3.2](image/Lifecycle-Model-1024x576.png)
 
