--- a/readme/3.md
+++ b/readme/3.md
@@ -70,4 +70,38 @@ em.persist(member);
 3. 준영속: 영속성 컨텍스트에 저장되었다가 분리가 된 상태
 4. 삭제: 삭제된 상태
 ![3.2](image/Lifecycle-Model-1024x576.png)
+   
+
+###### 비영속
+- 엔티티 객체가 갓 생성된 상태에서는 순수한 객체 상태이며 아직 저장은 하지 않은 상태.
+- 즉 영속성 컨텍스트나 DB와는 전혀 관련이 없는 상태를 말한다.
+```java
+Member member = new Member();
+member.setId("member1");
+member.setUsername("a");
+```
+![3.3](image/3_3.PNG)
+
+###### 영속
+- EntityManager를 통해 엔티티를 영속성 컨텍스트에 저장했다.
+- 영속성 컨텍스트가 관리하는 엔티티는 영속 상태가 되었고 영속성 컨텍스트에 의해 관리된다.
+- em.find() 혹은 JPQL을 사용해 조회한 엔티티 역시 영속성 컨텍스트가 관리하는 영속 상태다.
+```java
+em.persist(member);
+```
+![3.4](image/3_4.PNG)
+
+###### 준영속
+- 영속상태의 엔티티를 영속성 컨텍스트가 관리하지 않으면 준영속 상태가 된다.
+- em.detach()를 호출해 준영속 상태로 만든다.
+- em.close()를 호출해서 영속성 컨텍스트를 닫거나 em.clear()를 호출해서 영속성 컨텍스트를 초기화해도 영속성 컨텍스트가 관리하던 영속 상태의 엔티티는 준영속 상태가 된다.
+```java
+em.detach(member);
+```
+
+###### 삭제
+- 엔티티를 영속성 컨텍스트와 데이터베이스에서 삭제한다.
+```java
+em.remove(member);
+```
 
