--- a/readme/3.md
+++ b/readme/3.md
@@ -105,3 +105,43 @@ em.detach(member);
 em.remove(member);
 ```
 
+
+#### 영속성 컨텍스트의 특징
+###### 식별자 값
+- 영속성 컨텍스트는 엔티티를 식별자 값(@Id로 테이블의 기본 키와 매핑한 값)으로 구분한다.
+- 영속상태의 엔티티는 식별자 값이 반드시 있어야 한다.
+
+###### 영속성 컨텍스트와 데이터베이스
+- 영속성 컨텍스트에 엔티티를 저장하면 JPA는 보통 트랙잭션을 커밋하는 순간 영속성 컨텍스트에 새로 저장된 엔티티를 데이터베이스에 반영(flush)한다.
+
+###### 영속성 컨텍스트가 엔티티를 관리하면 생기는 장점
+1. 1차 캐시
+2. 동일성 보장
+3. 트랙잭션을 지우너하는 쓰기 지연
+4. 변경 감지
+5. 지연 로딩
+
+
+##### 엔티티 조회
+- 영속성 컨텍스트는 내부에 캐시를 가지고 있는데 이를 1차 캐시라 한다.
+- 영속 상태의 엔티티는 전부 이곳에 저장된다.      
+```java
+Member member = new Member();
+member.setId("member1");
+member.setUsername("a");
+
+em.persist(member);
+```
+
+![3.5](image/3_5.PNG)
+- 1차 캐시에 회원 엔티티를 저장했지만 아직 데이터베이스에 저장하지는 않았다.
+- 1차 캐시의 키는 식별자 값이다. 식별자 값은 데이터베이스 기본 키와 매핑되어 있다.
+
+```java
+Member member = em.find(Member.class, "member1");
+```
+- find() 메소드의 첫번째 파라미터는 엔티티 클래스의 타입이고, 두 번째는 조회할 엔티티의 식별자 값이다.
+```java
+public <T> T find(Class<T> entityClass, Object primaryKey);
+```
+- em.find() 호출시 우선 1차 캐시에서 엔티티를 찾고, 찾는 엔티티가 없다면 데이터베이스에서 조회한다.
