--- a/readme/3.md
+++ b/readme/3.md
@@ -145,3 +145,26 @@ Member member = em.find(Member.class, "member1");
 public <T> T find(Class<T> entityClass, Object primaryKey);
 ```
 - em.find() 호출시 우선 1차 캐시에서 엔티티를 찾고, 찾는 엔티티가 없다면 데이터베이스에서 조회한다.
+![3.6](image/3_6.PNG)
+
+- 만약 em.find()를 호출했지만 1차 캐시에 원하는 엔티티가 없으면 Entity Manager는 DB를 조회해 해당 엔티티를 생성한다. 그 뒤 1차 캐시에 저장한 후에 영속 상태의 엔티티를 반환한다.
+```java
+Member findMember2 = em.find(Member.class ,"member2");
+```
+![3.7](image/3_7.PNG)
+
+
+###### 영속 엔티티의 동일성 보장
+```java
+Member a = em.find(Member.class, "member1");
+Member b = em.find(Member.class, "member1");
+
+System.out.println(a==b);
+```
+- em.find(Member.class, "member1"); 을 아무리 반복해도 영속성 컨텍스트는 1차 캐시에 있는 같은 엔티티 인스턴스를 반환하기 때문에 둘은 같은 인스턴스이다.
+
+
+- 동일성과 동등성
+- 동일성 identity: 실제 인스턴스가 같다. == 는 true를 반환한다.
+- 동등성 equality: 실제 인스턴스는 다르지만 값은 같다. 동등성 비교는 equals()메소드를 사용해야 한다.
+
