--- a/readme/3.md
+++ b/readme/3.md
@@ -168,3 +168,20 @@ System.out.println(a==b);
 - 동일성 identity: 실제 인스턴스가 같다. == 는 true를 반환한다.
 - 동등성 equality: 실제 인스턴스는 다르지만 값은 같다. 동등성 비교는 equals()메소드를 사용해야 한다.
 
+##### 엔티티 등록
+```java
+EntityManager em = emf.createEntityManager();
+EntityTransaction transaction = em.getTransaction();
+//엔티티 메니저는 데이터 변경 시 트랜잭션을 시작해야 한다.
+
+transaction.begin();
+
+em.persist(memberA);
+em.persist(memberB);
+//여기까지 INSERT SQL을 데이터베이스에 보내지 않는다
+
+transacion.commit(); //[트랜잭션] 커밋
+```
+
+- 엔티티 매니저는 트랜잭션을 커밋하기 직전까지 데이터베이스에 엔티티를 저장하지 않고 내부 쿼리 저장소에 INSERT SQL을 차곡차곡 모아둔다.
+- 트랜잭션을 커밋할 때 모아둔 쿼리를 데이터베이스에 보내는데 이것을 트랜잭션을 지원하는 **쓰기 지연** 이라 한다.
