--- a/readme/3.md
+++ b/readme/3.md
@@ -185,3 +185,18 @@ transacion.commit(); //[트랜잭션] 커밋
 
 - 엔티티 매니저는 트랜잭션을 커밋하기 직전까지 데이터베이스에 엔티티를 저장하지 않고 내부 쿼리 저장소에 INSERT SQL을 차곡차곡 모아둔다.
 - 트랜잭션을 커밋할 때 모아둔 쿼리를 데이터베이스에 보내는데 이것을 트랜잭션을 지원하는 **쓰기 지연** 이라 한다.
+![3.8](image/3_8.PNG)
+- 위의 그림에서는 먼저 회원 A를 영속화했다.
+- 영속성 컨텍스트는 1차 캐시에 회원 엔티티를 저장하면서 동시에 회원 엔티티 정보로 등록 쿼리를 만든다.
+- 그 후, 만들어진 등록 쿼리를 쓰기 지연 SQL 저장소에 보관한다.
+
+![3.9](image/3_9.PNG)
+- 위의 그림에서는 회원 B를 영속화했다.
+- 마찬가지로 영속성 컨텍스트는 1차 캐시에 회원 엔티티를 저장하면서 동시에 회원 엔티티 정보로 등록 쿼리를 만든다.
+- 쓰기 지연 SQL 저장소에는 총 2건의 쿼리가 저장되었다.
+
+![3.10](image/3_10.PNG)
+- 트랜잭션을 커밋하면 엔티티 매니저는 우선 영속성 컨텍스트를 플러시한다.
+- 플러시는 영속성 컨텍스트의 변경 내용을 데이터베이스에 동기화하는 작업인데 이때 등록, 수정, 삭제한 엔티티를 데이터베이스에 반영한다.
+  - 쓰기 지연 SQL 저장소에 모인 쿼리를 DB에 보낸다.
+- 이렇게 영속성 컨텍스트의 변경 내용을 데이터베이스에 동기화한 후에 실제 데이터베이스 트랜잭션을 커밋한다.
