--- a/readme/3.md
+++ b/readme/3.md
@@ -200,3 +200,65 @@ transacion.commit(); //[트랜잭션] 커밋
 - 플러시는 영속성 컨텍스트의 변경 내용을 데이터베이스에 동기화하는 작업인데 이때 등록, 수정, 삭제한 엔티티를 데이터베이스에 반영한다.
   - 쓰기 지연 SQL 저장소에 모인 쿼리를 DB에 보낸다.
 - 이렇게 영속성 컨텍스트의 변경 내용을 데이터베이스에 동기화한 후에 실제 데이터베이스 트랜잭션을 커밋한다.
+
+##### 트랜잭션을 지원하는 쓰기 지연이 가능한 이유
+```java
+begin(); // 트랜잭션 시작
+save(A);
+save(B);
+save(C);
+commit(); // 트랜잭션 커밋
+```
+- 위의 로직은 두가지 경우로 생각해보자
+1. save() 메소드를 호출할 때마다 즉시 데이터베이스에 등록 쿼리를 보내고 마지막에 트랜잭션을 커밋한다.
+2. save() 메소드를 호출하면 등록 쿼리를 데이터베이스에 보내지 않고 메모리에 모아두고, 트랜잭션을 커밋할 때 모아둔 등록 쿼리를 데이터베이스에 보낸 후 커밋한다.
+
+- 두가지 경우 모두 트랜잭션 범위 안에서 실행되므로 둘의 결과는 똑같다.
+- 등록 쿼리를 그때 그때 데이터베이스에 전달해도 트랜잭션을 커밋하지 않으면 아무 일도 일어나지 않는다.  
+- 결국 커밋 직전에만 데이터베이스에 SQL을 전달하면 되므로 이것이 트랜잭션을 지원하는 쓰기 지연이 가능한 이유이다.
+- 이 기능을 활용하면 성능 최적화 역시 이룰 수 있다.
+
+##### 엔티티 수정
+- SQL을 직접 작성하는 방식은 프로젝트가 점점 커지면서 요구사항이 늘어나고 해당 요구사항에 맞춰 진행하다 보면 수정 쿼리가 점점 많아지고 비즈니스 로직을 분석하기 위해 SQL을 계속 확인해야 한다는 점이다.
+- 결국 비즈니스 로직이 SQL에 의존적이 되버린다.
+
+###### 변경 감지
+```java
+EntityManager em = emf.vreateEntityManager();
+EntityTransaction transaction = em.getTransaction();
+transaction.begin();
+
+Member memberA = em.find(Member.class, "memberA");
+
+memberA.setUsername("hi");
+memberA.setAge(10);
+
+//em.update(); 이런게 필요하지 않을까?
+
+transaction.commit();
+```
+
+- JPA로 엔티티를 수정할 때는 단순히 엔티티를 조회해서 데이터만 변경하면 된다.
+- 엔티티의 데이터만 변경했는데 데이터베이스에 반영이 되는 이유는 JPA에서 지원하는 변경감지 Dirty Checking 때문이다.
+
+![3.11](image/3_11.PNG)
+- JPA는 엔티티를 영속성 컨텍스트에 보관할 때, 최초 상태를 복사해서 저장해둔다 (스냅샷)
+- 플러시 시점에 스냅샷과 엔티티를 비교해서 변경된 엔티티를 찾는다.
+
+
+- 변경 감지는 영속상태의 엔티티에만 적용된다
+- 변경 감지시 엔티티의 모든 필드를 업데이트 한다.
+- 모든 필드를 업데이트 하면 데이터 전송량이 늘어나는 단점이 있지만
+1. 모든 필드를 업데이트 하면 수정 쿼리가 항상 같고 애플리케이션 로딩 시점에 수정 쿼리를 미리 생성해두고 재사용할 수 있다.
+2. 데이터베이스에 동일한 쿼리를 보내면 데이터베이스는 이전에 한 번 파싱된 쿼리를 재사용할 수 있다.
+- 물론 수정된 데이터만 사용해 동적으로 UPDATE SQL을 생성할 수도 있다.
+```java
+@Entity
+@org.hibernate.annotations.DynamicUpdate
+@Table(name = "Member")
+public class Member {
+    
+}
+```
+- 위와 같이 DynamicUpdate 어노테이션을 사용하면 수정된 데이터만 사용해서 동적으로 UPDATE SQL을 생성한다.
+- 데이터를 저장할 때 데이터가 존재하는 (null이 아닌) 필드만으로 INSERT SQL을 동적 생성하는 @DynamicInsert도 있다.
