--- a/readme/2.md
+++ b/readme/2.md
@@ -193,3 +193,80 @@ TypedQuery<Member> query=em.createQuery("select m from Member m",Member.class);
 
 
 - 위의 JPQL에서 "select m from Member m"에 나온 Member는 회원 엔티티 객체를 말하는 것이다. 절대로 MEMBER 테이블이 아니다.
+
+
+##### 엔티티 삭제
+- 엔티티를 삭제하기 위해서는 우선 대상 엔티티를 조회해야 한다.
+```java
+Member memberA = em.find(Member.class, "memberA");
+em.remove(memberA);
+```
+- 삭제 역시 remove()를 호출하면 즉시 삭제되는 것이 아니라 엔티티 등록과 비슷하게 삭제 쿼리를 쓰기 지연 SQL 저장소에 등록한 후 트랜잭션을 커밋해서 플러시를 호출해 실제 데이터베이스에 쿼리를 전달한다.
+- remove()를 호출하면 해당 엔티티는 영속성 컨텍스트에서 제거되기 때문에 이를 재사용하지 말고 가비지 컬렉션의 대상이 되도록 두는것이 좋다.
+
+
+#### 플러시
+- 영속성 컨텍스트의 변경 내용을 데이터베이스에 반영한다
+1. 변경 감지가 동작해서 영속성 컨텍스트에 있는 모든 엔티티를 스냅샷과 비교, 수정된 엔티티를 찾는다.
+  - 수정된 엔티티가 있는 경우엔 수정 쿼리를 만들어 쓰기 지연 SQL 저장소에 등록해둔다.
+2. 쓰기 지연 SQL 저장소의 쿼리를 데이터베이스에 전송한다. (등록, 수정, 삭제쿼리)
+
+- 영속성 컨텍스트를 플러시 하는 방법들
+1. em.flush()를 직접 호출
+2. 트랜잭션 커밋 시 플러시 자동 호출
+3. JPQL 쿼리 실행 시 플러시 자동 호출
+
+##### 트랜잭션 커밋 시 플러시 자동 호출
+- 트랜잭션을 커밋하기 전에 반드시 플러시를 호출해서 영속성 컨텍스트의 변경 내용을 데이터베이스에 반영해야 한다.
+- JPA는 이런 문제를 예방하기 위해 트랙잭션을 커밋할 때 플러시를 자동으로 호출한다.
+
+##### JPQL 쿼리 실행 시 플러시 자동 호출
+```java
+em.persist(memberA);
+em.persist(memberB);
+em.persist(memberC);
+
+query = em.createQuery("select m from Member m", Member.class);
+List<Member> members = query.getResultList();
+```
+
+- 먼저 em.persist()를 호출해서 엔티티들을 영속 상태로 만들었다. 이 엔티티들은 영속성 컨텍스트에만 있고 아직 데이터베이스에는 반영되지 않았다.
+- **이때 JPQL을 실행하면 어떻게 될까?**
+- JPQL은 SQL로 변환되어 데이터베이스에서 엔티티들을 조회하지만 엔티티들은 아직 데이터베이스에 없으므로 쿼리 결과로 조회되지 않는다.
+- 이런 이슈때문에 쿼리를 실행하기 직전에 영속성 컨텍스트를 플러시해서 변경 내용을 데이터베이스에 반영해야 한다.
+- 식별자 기준으로 조회하는 find() 메소드를 호출할 때는 플러시가 실행되지 않는다.
+
+###### 플러시 모드 옵션
+```java
+em.setFlushMode(FlushModeType.COMMIT) //커밋할때만 플러시
+em.setFlushMode(FlushModeType.AUTO) // 커밋 혹은 쿼리 실행시 플러시
+```
+
+###### **플러시는 영속성 컨텍스트에 보관된 엔티티를 지우는 것이 아닌 영속성 컨텍스트의 변경 내용을 데이터베이스에 동기화하는 것이다**
+
+#### 준영속
+- 영속성 컨텍스트가 관리하는 영속 상태의 엔티티가 영속성 컨텍스트에서 분리된 상태를 말한다.
+- 준영송 상태로 만드는 3가지 방법
+1. em.detach(entity) 특정 엔티티만 준영속 시킨다.
+2. em.clear() 영속성 컨텍스트를 완전 초기화
+3. em.close() 영속성 컨텍스트를 종료
+
+```java
+public void testDetached() {
+    ...
+    Member member = new Member();
+    member.setId("memberA");
+    member.setUsername("userA");
+    
+    em.persist(member);
+    
+    em.detach(member);
+    
+    transaction.commit();
+        }
+```
+
+- 위의 예제에서는 먼저 회원 엔티티를 생성하고 영속화 한뒤 em.detach(member)를 호출했다. detach()를 호출하는 순간 1차 캐시부터 쓰기 지연 SQL 저장소까지 해당 엔티티를 관리하기 위한 모든 정보가 제거된다.
+![3.12](image/3_12.PNG)
+![3.13](image/3_13.PNG)
+
