--- a/readme/2.md
+++ b/readme/2.md
@@ -270,3 +270,21 @@ public void testDetached() {
 ![3.12](image/3_12.PNG)
 ![3.13](image/3_13.PNG)
 
+##### 영속성 컨텍스트 초기화
+- detach()와는 달리 clear()는 영속성 컨텍스트를 초기화해서 해당 영속성 컨텍스트의 모든 엔티티를 준영속 상태로 만든다.
+##### 영속성 컨텍스트 종료
+- clsoe()는 영속성 컨텍스트를 종료시켜버리고 해당 영속성 컨텍스트가 관리하던 모든 영속 상태의 엔티티들을 모두 준영속 상태로 만든다.
+
+
+##### 준영속 상태의 특징
+1. 영속성 컨텍스트가 관리하지 않으므로 영속성 컨텍스트가 제공하는 어떤 기능도 동작하지 않는다.
+2. 비영속 상태와는 달리 준영속 상태에서는 반드시 식별자 값을 가지고 있다.
+3. 지연로딩을 할 수 없다.
+
+
+##### 병합
+- 준영속 상태의 엔티티를 다시 영속화 하기 위해서는 merge()를 사용한다.
+- merge() 메소드는 준영속 상태의 엔티티를 받아서 그 정보로 새로운 영속 상태의 엔티티를 반환한다.
+- 병합은 비영속 엔티티도 영속 상태도 만들 수 있다.
+- 병합은 파라미터로 넘어온 엔티티의 식별자 값으로 영속성 컨텍스트를 조회하고 찾는 엔티티가 없으면 DB에서 조회한다. 하지만 DB에서도 발견하지 못하는 경우 샐운 엔티티를 생성해서 병합한다.
+- 병합은 엔티티가 준영속 상태인지 비영속 상태인지 신경쓰지 않는다. 식별자 값으로 조회가 되면 해당 엔티티를 불러서 병합하고, 조회할 수 없으면 새로 생성해 병합한다.
