--- a/readme/4.md
+++ b/readme/4.md
@@ -1,7 +1,19 @@
 ### 엔티티 매핑
 - JPA를 사용함에 있어서 가장 중요한 것은 엔티티와 테이블을 정확히 매핑하는 것
 - JPA는 여러가지 매핑 어노테이션을 지원하고있으며 크게 4가지로 나눌 수 있다.
-1. 
-2. 
-3. 
-4. 
+1. 객체와 테이블 매핑: @Entity, @Table
+2. 기본 키 매핑: @Id
+3. 필드와 컬럼 매핑: @Column
+4. 연관관계 매핑: @ManyToOne, @JoinColumn
+
+
+#### @Entity
+- JPA를 사용해 테이블과 매핑할 클래스는 @Entity 어노테이션을 사용해 JPA가 관리하는 엔티티라는 것을 나타내준다.
+- 주의사항:
+    - 기본 생성자 필수(파라미터가 없는 public 혹은 protected 생성자)
+      - jpa가 엔티티를 생성할 때는 기본 생성자를 사용한다.
+    - final 클래스, enum, interface, inner 클래스에는 사용 불가
+    - 저장할 필드에 final을 사용하면 안 된다.
+    
+#### @Table
+- 엔티티와 매핑할 테이블을 지정한다. 생략시 매핑한 엔티티 이름을 테이블 이름으로 사용한다.
