--- a/readme/4.md
+++ b/readme/4.md
@@ -19,3 +19,11 @@
 - 엔티티와 매핑할 테이블을 지정한다. 생략시 매핑한 엔티티 이름을 테이블 이름으로 사용한다.
 
 #### 기본 키 매핑
+- 데이터베이스가 생성해주는 값을 사용해 키본 키를 매핑하기 위해 JPA는 다음과 같은 기본 키 생성 전략을 제공한다.
+1. 직접 할당: 기본 키를 애플리케이션에서 직접 할당
+2. 자동 생성: 대리 키 사용 방식
+   - IDENTITY: 기본 키 생성을 데이터베이스에 위임
+   - SEQUENCE: 데이터베이스 시퀀스를 사용해 기본 키를 할당
+   - TABLE: 키 생성 테이블을 사용
+
+- JPA가 여러가지 자동 생성 전략을 제공하는 이유는 데이터베이스 벤더마다 지원하는 방식이 다르기 때문이다.
