--- a/readme/4.md
+++ b/readme/4.md
@@ -27,3 +27,65 @@
    - TABLE: 키 생성 테이블을 사용
 
 - JPA가 여러가지 자동 생성 전략을 제공하는 이유는 데이터베이스 벤더마다 지원하는 방식이 다르기 때문이다.
+
+##### 기본 키 직접 할당
+```java
+@Id
+@Column(name = "id")
+private String id;
+```
+- 기본 키를 직접 할당하려면 위와 같이 @Id로 매핑한다.
+- @Id를 적용할 수 있는 자바 타입은 다음과 같다
+    - 자바 기본형
+    - 자바 Wrapper형
+    - String
+    - java.util.Date
+    - java.sql.Date
+    - java.math.BigDecimal
+    - java.math.BigInteger
+    
+- 기본 키 직접 할당 전력은 em.persist()로 엔티티를 저장하기 전에 애플리케이션에서 기본 키를 직접 할당하는 방법이다.
+
+##### IDENTITY 전략
+- 기본 키 생성을 데이터베이스에 위임하는 전략
+```java
+@Entity
+public class Board {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+}
+```
+- IDENTITY 전략을 사용하면 JPA는 기본 키 값을 얻어오기 위해 데이터베이스를 추가로 조회한다.
+- JDBC3에 추가된 Statement.getGeneratedKeys()를 사용하면 데이터를 저장하면서 동시에 생성된 기본 키 값을 얻어 올 수 있다.
+- 엔티티가 영속 상태가 되기 위해서는 식별자가 반드시 필요한데 IDENTITY 전략은 엔티티를 데이터베이스에 저장해야지만 식별자를 구할 수 있다. 그렇기 때문에 em.persist()를 호출하는 즉시 INSERT SQL이 데이터베이스에 전달되며 트랜잭션을 지원하는 쓰기 지연이 동작하지 않는다.
+
+##### SEQUENCE 전략
+- 데이터베이스 시퀀스는 유일한 값을 순서대로 생성하는 특별한 데이터베이스 오브젝트
+- 시퀀스 전략을 사용하려면 우선 시퀀스를 생성해야 한다.
+```sql
+CREATE TABLE BOARD (
+    ID BIGINT NOT NULL PRIMARY KEY,
+    DATA VARCHAR (255)
+)
+
+CREATE SEQUENCE BOARD_SEQ START WITH 1 INCREMENT BY 1;
+```
+```java
+@Entity
+@SequenceGenerator(
+        name = "BOARD_SEQ_GENERATOR"
+        sequenceName = "BOARD_SEQ" //매핑할 데이터베이스 시퀀스 이름
+        initialValue = 1, allocationSize = 1)
+public class Board {
+    
+    @Id
+    @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "BOARD_SEQ_GENERATOR")
+    private Long id;
+}
+```
+- SEQUENCE 전략은 em.persist()를 호출할 때 먼저 데이터베이스 시퀀스를 사용해서 식별자를 조회한다.
+- 그 후에 조회한 식별자를 엔티티에 할당한 후 엔티티를 영속성 컨텍스트에 저장한다.
+- 이후 트랜잭션을 커밋해서 플러시가 일어나면 엔티티를 데이터베이스에 저장한다.
+    - IDENTITY 전략은 먼저 엔티티를 데이터베이스에 저장한 후에 식별자를 조회해서 엔티티의 식별자에 할당한다
+    
