--- a/readme/4.md
+++ b/readme/4.md
@@ -89,3 +89,46 @@ public class Board {
 - 이후 트랜잭션을 커밋해서 플러시가 일어나면 엔티티를 데이터베이스에 저장한다.
     - IDENTITY 전략은 먼저 엔티티를 데이터베이스에 저장한 후에 식별자를 조회해서 엔티티의 식별자에 할당한다
     
+#### TABLE 전략
+- Table 전략은 키 생성 전용 테이블을 하나 만들어서 여기에 이름과 값으로 사용할 컬럼을 만들어 데이터베이스 시퀀스를 흉내내는 전략
+```sql
+ create table MY_SEQUENCES (
+     sequence_name varchar (255) not null,
+     next_val bigint,
+     primary key (sequence_name)
+ )
+```
+```java
+@Entity
+@TableGenerator (
+        name = "BOARD_SEQ_GENERATOR",
+        table = "MY_SEQUENCES",
+        pkColumnValue = "BOARD_SEQ", allocationSize = 1)
+public class Board {
+    
+    @Id
+    @GeneratedValue(strategy = GenerationType.TABLE,
+    generator = "BOARD_SEQ_GENERATOR")
+    private Long id;
+}
+```
+
+#### AUTO 전략
+- 데이터베이스 방언에 따라 IDENTITY, SEQUENCE, TABLE중 하나를 선택한다.
+
+#### 기본 키 매핑 정리
+- 영속성 컨텍스느는 식별자 값으로 엔티티를 구분하기 때문에 엔티티를 영속 상태로 만들기 위해서는 반드시 식별자 값이 필요하다.
+1. 직접 할당: em.persist()를 호출하기 전에 애플리케이션에서 직접 식별자를 할당한다. 
+2. SEQUENCE: 데이터베이스 시퀀스에서 식별자 값을 획득한 후 영속성 컨텍스트에 저장한다.
+3. TABLE: 데이터베이스 시퀀스 생성을 테이블에서 식별자 값을 획득한 수 영속성 컨텍스트에 저장한다.
+4. IDENTITY: 데이터베이스에 엔티티를 저장해서 식별자 값을 획득한 후 영속성 컨텍스트에 저장한다.
+
+##### 식별자 선택 전략
+1. null값은 허용하지 않는다.
+2. 유일해야 한다.
+3. 변해선 안 된다.
+
+- 자연키: 비즈니스에 의미가 있는 키. 주민등록번호, 이메일, 전화번호..
+- 대리키: 비즈니스와 관련이 없는 임의로 만들어진 키. 오라클 시퀀스, auto_increment, 키생성 테이블 사용
+
+- 자연키 보다는 대리키를 사용하자
