--- a/readme/4.md
+++ b/readme/4.md
@@ -132,3 +132,23 @@ public class Board {
 - 대리키: 비즈니스와 관련이 없는 임의로 만들어진 키. 오라클 시퀀스, auto_increment, 키생성 테이블 사용
 
 - 자연키 보다는 대리키를 사용하자
+
+#### 필드와 컬럼 매핑
+1. @Column
+- 객체 필드를 테이블 컬럼에 매핑한다.
+2. @Enumerated
+- 자바 enum타입을 매핑할 때 사용한다.
+3. @Temporal
+- 날짜 타입을 매핑할 때 사용한다.
+4. @Lob
+- 데이터베이스 BLOB, CLOB와 매핑
+    - BLOB: String, char[], java.sql.CLOB
+    - CLOB: byte[], java.sql.BLOB
+5. @Transient
+- 해당 어노테이션으로 매핑된 필드는 매핑하지 않는다.
+- 데이터베이스에 저장하지 않고 조회하지도 않는다.
+- 객체에 어떤 값을 임시로 저장하고 싶을때 사용한다.
+6. @Access
+- JPA가 엔티티에 접근하는 방식을 지정한다.
+- AccessType.FIELD: 필드 직접 접근. 필드가 private이어도 접근 가능
+- AccessType.PROPERTY: 접근자 getter를 사용해서 접근
