--- a/readme/5.md
+++ b/readme/5.md
@@ -1,1 +1,83 @@
 ### 연관관계 매핑 기초
+- 연관관계 매핑을 이해하기 위한 핵심 키워드
+1. 방향
+   - 한 쪽만 참조하는 것을 단방향
+   - 양쪽 모두 서로 참조하는 것을 양방향
+   - 방향은 객체 관계에만 존재하고 테이블 관계는 항상 양방향이다. 
+2. 다중성
+   - 다대일
+   - 일대다
+   - 일대일
+   - 다대다
+   - 여러개의 B객체가 하나의C 객체에 속한다면 B와 C는 다대일 관계이고 C와 B는 일대다 관계이다.
+3. 연관관계의 주인
+   - 객체를 양방향 연관관계로 만들면 연관관계의 주인을 정해야 한다.
+    
+#### 단방향 연관관계
+![5.1](image/5_1.PNG)
+
+- 객체 연관관계
+   - 회원 객체는 Member.team 필드(멤버 변수)로 팀 객체와 연관관계를 맺는다.
+   - 두 객체는 단방향 관계이다.
+      - 회원은 Member.team 필드를 통해 팀을 알 수 있지만 반대로 팀은 회원을 알 수 없다.
+   
+- 테이블 연관관계
+   - 회원 테이블은 TEAM_ID 외래 키로 팀 테이블과 연관관계를 맺는다.
+   - 두 테이블은 양방향 관계다.
+      - 회원 테이블의 TEAM_ID 외래 키를 통해 회원과 팀을 조인할 수 있고 반대로 팀과 회원도 조인할 수 있다.
+   
+- 객체 연관관계와 테이블 연관관계의 차이
+    - 참조를 통한 연관관계를 항상 단방향
+    - 객체간 양방향 연관관계를 만들기 위해서는 반대쪽에도 필드를 추가해 참조를 보관해야 한다.
+    - 양방향 관계가 아닌 서로 다른 방향을 가진 단방향 관계 2개다.
+    
+- 객체 연관관계 vs 테이블 연관관계
+    - 객체는 참조(주소)로 연관관계를 맺는다
+    - 테이블은 외래 키로 연관관계를 맺는다.
+    - 객체의 연관관계를 단방향
+    - 테이블의 연관관계는 양방향
+    
+##### 순수한 객체 연관관계
+```java
+public class Member {
+    private String di;
+    private String username;
+    
+    private Team team;
+    
+    public void setTEam(Team team) {
+        this.team = team;
+    }
+    
+    //Getter, Setter...
+}
+
+public class Team {
+    private String id;
+    private String name;
+    
+    //Getter, Setter...
+}
+```
+
+```java
+
+public static void main(String[] args) {
+    //생성자 (id, 이름)
+    Member member1 = new Member("member1", "회원1");
+    Member member2 = new Member("member2", "회원2");
+    Team team1 = new Team("team1", "팀1");
+    
+    member1.setTeam(team1);
+    member2.setTeam(team2);
+    
+    Team findTeam = member1.getTeam();
+}
+```
+
+![5.2](image/5_2.PNG)
+- 위 그림을 보면 회원1과 회원2는 팀1에 속해있다
+```java
+Team findTeam = member1.getTeam();
+```
+- 객체는 참조를 사용해서 연관관계를 탐색하는데 이것을 객체 그래프 탐색이라고 한다.
