--- a/readme/5.md
+++ b/readme/5.md
@@ -81,3 +81,47 @@ public static void main(String[] args) {
 Team findTeam = member1.getTeam();
 ```
 - 객체는 참조를 사용해서 연관관계를 탐색하는데 이것을 객체 그래프 탐색이라고 한다.
+
+##### 객체 관계 매핑
+```java
+@Entity
+public class Member {
+    @Id
+    @Column(name = "MEMBER_ID")
+    private String id;
+    private String username;
+    
+    @ManyToOne
+    @JoinColumn(name="TEAM_ID")
+    private Team team;
+    
+    public void setTeam(Team team) {
+        this.team  = team;
+    }
+}
+```
+
+```java
+@Entity
+public class Team {
+    @Id
+    @Column(name = "TEAM_ID")
+    private String id;
+    
+    private String name;
+}
+```
+
+- 객체 연관관례: 회원 객체의 Member.team 필드 사용
+- 테이블 연관관계: 회원 테이블의 MEMBER.TEAM_ID 외래 키 컬럼을 사용
+
+
+- Member.team과 MEMBER.TEAM_ID를 매핑하는 것이 연관관계 매핑이다.
+```java
+//연관관계 매핑 코드
+@ManyToOne
+@JoinColumn(name="TEAM_ID")
+private Team team;
+```
+- @ManyToOne: 다대일 (N:1) 관계라는 매핑 정보.
+- @JoinColumn: 조인 컬럼은 외래 키를 매핑할 때 사용한다. name 속성에는 매핑할 외래 키 이름을 지정한다.
