--- a/readme/5.md
+++ b/readme/5.md
@@ -125,3 +125,91 @@ private Team team;
 ```
 - @ManyToOne: 다대일 (N:1) 관계라는 매핑 정보.
 - @JoinColumn: 조인 컬럼은 외래 키를 매핑할 때 사용한다. name 속성에는 매핑할 외래 키 이름을 지정한다.
+
+
+#### 연관관계 사용
+##### 저장
+- 연관관계를 매핑한 엔티티의 저장
+```java
+public void testSave() {
+    
+    //팀1 저장
+    Team team1 = new Team("team1", "팀1");
+    em.persist(team1);
+    
+    //회원1 저장
+    Member member1 = new Member("member1", "회원1");
+    member1.setTeam(team1);
+    em.persist(member1);
+
+    //회원2 저장
+    Member member2 = new Member("member2", "회원2");
+    member2.setTeam(team1);
+    em.persist(member2);
+}
+```
+- JPA에서 엔티티를 저장할 떄 연관된 모든 엔티티는 영속 상태여야 한다.
+```java
+member1.setTeam(team1); // 회원 -> 팀 참조
+em.persist(member1); //저장
+```
+- 회원 인테테는 팀 엔티티를 참조하고 저장했다. JPA는 참조한 팀의 식별자(Team.id)를 외래 키로 사용해 등록 쿼리를 생성한다.
+```sql
+INSERT INTO TEAM (TEAM_ID, NAME) VALUES ('team1', '팀1')
+INSERT INTO MEMBER (MEMBER_ID, NAME, TEAM_ID) VALUES ('member1', '회원1', 'team1')
+INSERT INTO MEMBER (MEMBER_ID, NAME, TEAM_ID) VALUES ('member2', '회원2', 'team1')
+```
+
+##### 수정
+```java
+private static void updateRelation(EntityManager em) {
+    Team team2 = new Team("team2", "팀2");
+    em.persist(team2);
+    
+    Member member = em.find(Member.class, "member1");
+    member.setTeam(team2);
+}
+```
+-불러온 엔티티의 값만 변경해두면 트랜잭션을 커밋할 때 플러시가 일어나면서 변경 감지 기능이 작동하고 변경사항을 데이터베이스에 자동으로 반영한다.
+- 연관관계 수정시에도 참조하는 대상만 변경하면 나머지는 JPA가 처리해준다.
+##### 삭제
+```java
+private static void deleteRelation(EntityManager em) {
+    Member member1 = em.find(Member.class, "member1");
+    member1.setTeam(null);
+}
+```
+##### 조회
+- 연관관계가 있는 엔티티를 조회하는 방법은 크게 2가지다
+1. 객체 그래프 탐색 (객체 연관관계를 사용한 조회)
+   - member.getTeam()을 사용해 member와 연관된 team 엔티티를 조회할 수 있다.
+```java
+Member member = em.find(Member.class, "member1");
+Team team = member.getTeam(); //객체 그래프 탐색
+System.out.println("팀이름 = " + team.getName()); // 팀 이름 = 팀1
+```    
+2. 객체지향 쿼리 사용 (JPQL)
+    - 회원을 대상으로 조회하는데 팀1에 소속된 회원만 조회하려면 회원과 연관된 팀 엔티티를 검색 조건으로 사용해야 한다.
+    - SQL은 연관된 테이블을 조인해서 검색조건을 사용하면 된다.
+```java
+private static void queryLogicJoin(EntityManager em) {
+    String jpql = "select m from Member m join m.team t where " + "t.name =:teamName";
+    
+    List<Member> resultList = em.createQuery(jpql, Member.class).setParameter("teamName", "팀1").getResultList();
+    
+    for (Member member : resultList) {
+        System.out.println("[query] member.username="+member.getUsername());
+    }
+}
+```
+- **from Member m join m.team** 부분을 보면 회원이 팀과 관계를 가지고 있는 필드 (m.team)를 통해서 Member와 Team을 조인하고 where 절에서 조인한 t.name을 검색조건으로 사용해 팀1에 속한 회원만 검색했다.
+##### 연관된 엔티티 삭제
+- 연관된 엔티티를 삭제하려면 기존에 있던 연관관계를 먼저 제거하고 삭제해야 한다.
+```java
+member1.setTeam(null);
+member2.setTeam(null);
+em.remove(team);
+```
+- 연관관계를 먼저 제거하지 않으면 외래 키 제약조건으로 인해 데이터베이스에서 오류가 발생한다.
+
+#### 양방향 연관관계
