--- a/readme/5.md
+++ b/readme/5.md
@@ -213,3 +213,66 @@ em.remove(team);
 - 연관관계를 먼저 제거하지 않으면 외래 키 제약조건으로 인해 데이터베이스에서 오류가 발생한다.
 
 #### 양방향 연관관계
+![5.5](image/5_5.PNG)
+- 객체 연관관계를 보면 회원과 팀은 다대일 관계이고 팀에서 회원은 일대다 관계다
+- 일대다 관계를 여러 건과 연관관계를 맺을 수 있으므로 컬렉션을 이용한다.
+- 테이블은 외래 키 하나로 양방향으로 조회할 수 있다. 처음부터 양방향 관계다.
+
+
+##### 양방향 연관관계 매핑
+```java
+@Entity
+public class Member {
+    @Id
+    @Column(name = "MEMBER_ID")
+    private String id;
+    
+    private String username;
+    
+    @ManyToOne
+    @JoinColumn(name="TEAM_ID")
+    private Team team;
+    
+    public void setTEam(Team team) { 
+        this.team = team;
+    }
+}
+```
+```java
+@Entity
+public class Team {
+    
+    @Id
+    @Column(name = "TEAM_ID")
+    private String id;
+    
+    private String name;
+    
+    @OneToMany(mappedBy = "team")
+    private List<Member> members = new ArrayList<Member>();
+}
+```
+- @OneToMany의 mappedBy 속성은 양방향 매핑일 때 반대쪽 매핑의 필드 이름을 값으로 주면 된다.
+
+##### 일대다 컬렉션 조회
+```java
+public void biDirection() {
+    Team team = em.find(Team.class, "team1");
+    List<Member> members = team.getMembers();
+    
+    for(Member member : members) {
+        System.out.println("member.username = " + member.getUsername());
+    }
+}
+```
+
+#### 연관관계의 주인
+- mappedBy가 필요한 이유는 무엇인가
+- 사실 객체에는 양방향 연관관계라는 것이 없다. 서로 다른 반향향 연관관계 2개를 애플리케이션 로직으로 묶어 양방향인 것처럼 보이게 할 뿐이다.
+- 하지만 테이블은 외래 키 하나로 두 테이블의 연관관계를 관리하기 때문에 차이가 발생한다.
+    - 엔티티를 양방향으로 설정하면 객체의 참조는 둘인데 외래 키는 하나인 상태이기 때문에 차이 발생
+    
+- 이러한 차이 때문에 JPA는 두 객체 연관관계 중 하나를 정해서 테이블의 외래 키를 관리해야 하는데 이것을 **연관관계의 주인**이라 한다.
+
+##### 양방향 매핑의 규칙: 연관관계의 주인
+- 
