--- a/readme/5.md
+++ b/readme/5.md
@@ -275,4 +275,80 @@ public void biDirection() {
 - 이러한 차이 때문에 JPA는 두 객체 연관관계 중 하나를 정해서 테이블의 외래 키를 관리해야 하는데 이것을 **연관관계의 주인**이라 한다.
 
 ##### 양방향 매핑의 규칙: 연관관계의 주인
-- 
+- 연관관계의 주인만이 데이터베이스 연관관계와 매핑되고 외래 키를 관리(등록, 수정, 삭제)할 수 있다.
+- 연관관계의 주인은 mappedBy 속성을 사용하지 않고 주인이 아닌 경우엔 mappedBy 속성을 사용해서 속성의 값으로 연관관계의 주인을 지정해야 한다.
+```java
+class Member {
+    @ManyToOne
+    @JoinColumn(name="TEAM_ID")
+    private Team team;
+}
+class Team {
+    @OneToMany
+    private List<Member> members = new ArrayList<Member>();
+}
+```
+- 연관관계의 주인이란 외래 키 관리자를 뜻한다.
+- 여기선 회원 테이블에 있는 TEAM_ID 외래 키를 관리할 관리자를 선택해야 한다.
+- 만약 팀 엔티티에 있는 Team.members를 주인으로 설정하면 전혀 다른 테이블에 있는 외래 키를 관리해야 한다.
+- 하지만 회원 엔티티에 있는 Member.team을 주인으로 설정하면 자기 테이블에 있는 외래 키를 관리하면 된다.
+
+##### 연관관계의 주인은 외래 키가 있는 곳
+- 연관관계의 주인은 테이블에 외래 키가 있는 곳으로 정해야 한다.
+- 즉 여기선 Team.members에 mappedBy="team" 속성을 사용해 주인이 아님을 설정하고 mappedBy 속성의 값으로 연관관계의 주인인 team을 주면 된다.
+    - mappedBy의 값으로 사용된 team은 연관관계의 주인인 Member 엔티티의 team 필드를 말한다.
+    
+#### 양방향 연관관계 저장
+```java
+public void testSave() {
+    
+    //팀1 저장
+    Team team1 = new Team("team1", "팀1");
+    em.persist(team1);
+    
+    //회원1 저장
+    Member member1 = new Member("member1", "회원1");
+    member1.setTeam(team1);
+    em.persist(member1);
+
+    //회원2 저장
+    Member member2 = new Member("member2", "회원2");
+    member2.setTeam(team1);
+    em.persist(member2);
+}
+```
+```sql
+SELECT * FROM MEMBER
+```
+- 위의 쿼리로 멤버 테이블을 조회하면 TEAM_ID 외래 키에 팀의 기본 기 값이 저장되어 있는 것을 확인할 수 있다.
+- 팀에 멤버를 추가하는 코드가 있어야 할 것 같지만 Team.members는 연관관계의 주인이 아니므로 외래 키에 영향을 주지 않는다.
+- Member.team은 연관관계의 주인이기에 엔티티 매니저는 member1.setTeam(team1);에 입력된 값을 사용해 외래 키를 관리한다.
+
+
+#### 양방향 연관관계의 주의점
+- 양방향 연관관계를 설정한 뒤, 연관관계의 주인에는 값을 입력하지 않고 주인이 아닌 곳에만 값을 입력하는 실수.
+```java
+public void testSave() {
+        
+    //회원1 저장
+    Member member1 = new Member("member1", "회원1");
+    em.persist(member1);
+
+    //회원2 저장
+    Member member2 = new Member("member2", "회원2");
+    em.persist(member2);
+
+    //팀1 저장
+    Team team1 = new Team("team1", "팀1");
+    team1.getMembers().add(member1);
+    team1.getMembers().add(member2);
+    
+    em.persist(team1);
+}
+```
+- 위와 같이 연관관계의 주인이 아닌 곳에만 값을 설정하고 쿼리를 날려 회원 테이블을 조회하면 외래 키 TEAM_ID에 team1이 아닌 null 값이 입력된다.
+- **연관관계의 주인만이 외래 키의 값을 변경할 수 있다**
+
+##### 순수한 객체까지 고려한 양방향 연관관계
+- 사실 객체 관점에서 양쪽 방향에 모두 값을 입력해주는 것이 가장 안전하다.
+- 그렇지 않으면 JPA를 사용하지 않는 순수한 객체 상태에서 심각한 문제가 발생하기 때문
