--- a/readme/5.md
+++ b/readme/5.md
@@ -352,4 +352,82 @@ public void testSave() {
 ##### 순수한 객체까지 고려한 양방향 연관관계
 - 사실 객체 관점에서 양쪽 방향에 모두 값을 입력해주는 것이 가장 안전하다.
 - 그렇지 않으면 JPA를 사용하지 않는 순수한 객체 상태에서 심각한 문제가 발생하기 때문
-- 
+```java
+public void testORMBiDerectional() {
+    //팀1 저장
+    Team team1 = new Team("team1", "팀1");
+    em.persist(team1);
+    
+    Member member1 = new Member("member1" ,"회원1");
+    
+    member1.setTeam(team1); // member1 -> team1 연관관계 설정
+    team1.getMembers().add(member1); //team1 -> member1 연관관계 설정
+    em.persist(member1);
+    
+    Member member2 = new Member("member2", "회원2");
+    
+    member2.setTeam(team1); // member2 -> team1 연관관계 설정
+    team1.getMembers().add(member2); //team1 -> member2 연관관계 설정
+    em.persist(member2);
+}
+```
+- member1.setTeam(team1); // 연관관계의 주인
+- team1.getMembers().add(member1); // 연관관계의 주인이 아니며 저장 시 사용되지 않는다.
+
+
+- Member.team: 연관관계의 주인, 이 값으로 외래 키를 관리한다.
+- Team.members:  연관관계의 주인이 아니며 저장 시 사용되지 않는다.
+
+- 객체까지 고려해서 주인이 아닌 곳에도 값을 입력하자.
+
+##### 연관관계 편의 메소드
+- 위의 코드처럼 양방향 연관관계를 맺어주는 코드를 따로 호출하다 보면 실수로 둘 중 하나만 호출해서 양방향이 깨질 수 있다.
+- 양방향 관계에서 두 코드는 하나인 것처럼 사용하는 것이 안전하다.
+```java
+public class Member {
+    private Team team;
+    
+    public void setTeam(Team team) {
+        this.team = team;
+        team.getMembers().add(this);
+    }
+}
+```
+
+- setTeam() 메소드 하나로 양방향 관계를 모두 설정하도록 변경했다.
+```java
+public void testORMBiDerectional() {
+    //팀1 저장
+    Team team1 = new Team("team1", "팀1");
+    em.persist(team1);
+    
+    Member member1 = new Member("member1" ,"회원1");
+    member1.setTeam(team1);
+    em.persist(member1);
+    
+    Member member2 = new Member("member2", "회원2");
+    member2.setTeam(team1);
+    em.persist(member2);
+}
+```
+
+##### 연관관계 편의 메소드 작성 시 주의사항
+- 사실 setTeam() 메소드에는 버그가 있다.
+```java
+member1.setTeam(teamA);
+member1.setTeam(teamB);
+Member findMember = teamA.getMember(); //member1이 조회된다.
+```
+- teamA에서 teamB로 변경할 때 teamA -> member1 관계를 제거 하지 않았기 때문에 생기는 문제이다.
+- 연관관계를 변경할 때는 기존 팀이 있으면 기존 팀과 회원의 연관관계를 삭제하는 코드를 추가해야 한다.
+```java
+public void setTeam(Team team){
+    if(this.team != null) {
+        this.team.getMembers().remove(this);
+    }
+    this.team = team;
+    team.getMembers().add(this);
+}
+```
+
+
