--- a/readme/6.md
+++ b/readme/6.md
@@ -4,4 +4,13 @@
 2. 단방향, 양방향
 3. 연관관계의 주인
 
-- 먼저 연관관계가 있는 두 엔티티가 일대일 관계인지 일대다 관계인지 다중성을 고려해야한다.
+- 먼저 연관관계가 있는 두 엔티티가 일대일 관계인지 일대다 관계인지 다중성을 고려해야 한다.
+- 두 엔티티 중 한쪽만 참조하는 단방향 관계인지 서로 참조하는 양방향 관계인지 고려해야 한다.
+- 양방향 관계면 연관관계의 주인을 정해야 한다.
+
+##### 다중성
+- 연관관계의 다중성
+1. 다대일
+2. 일대다
+3. 일대일
+4. 다대다
