--- a/readme/6.md
+++ b/readme/6.md
@@ -18,3 +18,43 @@
 - 일대다의 반대는 항상 다대일
 - 일대일의 반대는 항상 일대일
 
+##### 6.1 다대일
+- 데이터베이스 테이블의 일대다 관계에서 외리 키는 항상 다쪽에 있다. 따라서 객체 양방향 관계에서 연관관계의 주인은 항상 다쪽이다.
+- **양방향 연관관계에서는 항상 다쪽에 외래 키가 있고 외래 키를 가진 쪽이 연관관계의 주인이다**
+- 양방향 연관관계는 항상 서로를 참조해야 한다.
+
+##### 6.2 일대다
+- 일대다 관계는 엔티티를 하나 이상 참조할 수 있으므로 자바 컬렉션중에 하나를 사용해야 한다.
+
+###### 일대다 단방향
+- 일대다 단방향 관계는 약간 특이하다
+    - 일대다 단방향은 반대쪽 테이블에 있는 외래 키를 관리한다.
+    - 보통은 자신이 매핑한 테이블의 외래 키를 관리함
+    
+```java
+@Entity
+public class Team {
+    @Id
+    @GeneratedValue
+    @Column(name="TEAM_ID")
+    private Lond id;
+    
+    private String name;
+    
+    @OneToMany
+    @JoinColumn(name = "TEAM_ID") // MEMBER 테이블의 TEAM_ID (FK)
+    private List<Member> members = new ArrayList<Member>();
+}
+```
+```java
+@Entity
+public class Member {
+    @Id
+    @GeneratedValue
+    @Column(name = "MEMBER_ID")
+    private Long id;
+    
+    private String username;
+}
+```
+- 일대다 단방향 관계를 매핑할 때는 @JoinColumn을 명시해야한다.
