--- a/readme/6.md
+++ b/readme/6.md
@@ -57,5 +57,34 @@ public class Member {
     private String username;
 }
 ```
-- 일대다 단방향 관계를 매핑할 때는 @JoinColumn을 명시해야한다.
+- 일대다 단방향 관계를 매핑할 때는 @JoinColumn을 명시해야한다. 그렇지 않으면 JPA는 연결 테이블을 중간에 두고 연관관계를 관리하는 조인 테이블 전략을 사용한다.
 
+```java
+public void testSave() {
+    Member m1 = new Member("member1");    
+    Member m2 = new Member("member2");
+    
+    Team t1= new Team("team1");
+    t1.getMembers().add(m1);
+    t1.getMembers().add(m2);
+    
+    em.persist(m1);
+    em.persist(m2);
+    em.persist(t1);
+    
+    transaction.commit();
+    
+}
+```
+```sql
+-- 위 코드의 실행 결과 SQL
+insert into Member (MEMBER_ID, username) values(null, ?)
+insert into Member (MEMBER_ID, username) values(null, ?)
+insert into Team (TEAM_ID, name) values (null, ?)
+update Member set TEAM_ID=? where MEMBER_ID=?
+update Member set TEAM_ID=? where MEMBER_ID=?
+```
+- Member 엔티티는 Team 엔티티를 모르고 연관관계에 대한 정보는 Team 엔티티의 members가 관리한다. 따라서 Member 엔티티를 저장할 때는 MEMBER 테이블의 TEA_ID 외래 키에 아무 값도 저장되지 않는다. 
+- 대신 Team 엔티티를 저장할 때 Team.members의 참조 값을 확인해서 회원 테이블에 있는 TEAM_ID 외래 키를 업데이트 한다.
+
+- **일대다 단방향 보다는 다대일 양방향 매핑을 사용하자**
