--- a/readme/6.md
+++ b/readme/6.md
@@ -1,5 +1,7 @@
 ### 다양한 연관관계 매핑
+
 - 엔티티 연관관계 매핑시 고려해야 할 3가지
+
 1. 다중성
 2. 단방향, 양방향
 3. 연관관계의 주인
@@ -9,7 +11,9 @@
 - 양방향 관계면 연관관계의 주인을 정해야 한다.
 
 ##### 다중성
+
 - 연관관계의 다중성
+
 1. 다대일
 2. 일대다
 3. 일대일
@@ -19,72 +23,134 @@
 - 일대일의 반대는 항상 일대일
 
 ##### 6.1 다대일
+
 - 데이터베이스 테이블의 일대다 관계에서 외리 키는 항상 다쪽에 있다. 따라서 객체 양방향 관계에서 연관관계의 주인은 항상 다쪽이다.
 - **양방향 연관관계에서는 항상 다쪽에 외래 키가 있고 외래 키를 가진 쪽이 연관관계의 주인이다**
 - 양방향 연관관계는 항상 서로를 참조해야 한다.
 
 ##### 6.2 일대다
+
 - 일대다 관계는 엔티티를 하나 이상 참조할 수 있으므로 자바 컬렉션중에 하나를 사용해야 한다.
 
 ###### 일대다 단방향
+
 - 일대다 단방향 관계는 약간 특이하다
     - 일대다 단방향은 반대쪽 테이블에 있는 외래 키를 관리한다.
     - 보통은 자신이 매핑한 테이블의 외래 키를 관리함
-    
+
 ```java
+
 @Entity
 public class Team {
     @Id
     @GeneratedValue
-    @Column(name="TEAM_ID")
+    @Column(name = "TEAM_ID")
     private Lond id;
-    
+
     private String name;
-    
+
     @OneToMany
     @JoinColumn(name = "TEAM_ID") // MEMBER 테이블의 TEAM_ID (FK)
     private List<Member> members = new ArrayList<Member>();
 }
 ```
+
 ```java
+
 @Entity
 public class Member {
     @Id
     @GeneratedValue
     @Column(name = "MEMBER_ID")
     private Long id;
-    
+
     private String username;
 }
 ```
+
 - 일대다 단방향 관계를 매핑할 때는 @JoinColumn을 명시해야한다. 그렇지 않으면 JPA는 연결 테이블을 중간에 두고 연관관계를 관리하는 조인 테이블 전략을 사용한다.
 
 ```java
-public void testSave() {
-    Member m1 = new Member("member1");    
-    Member m2 = new Member("member2");
-    
-    Team t1= new Team("team1");
-    t1.getMembers().add(m1);
-    t1.getMembers().add(m2);
-    
-    em.persist(m1);
-    em.persist(m2);
-    em.persist(t1);
-    
-    transaction.commit();
-    
-}
+public void testSave(){
+        Member m1=new Member("member1");
+        Member m2=new Member("member2");
+
+        Team t1=new Team("team1");
+        t1.getMembers().add(m1);
+        t1.getMembers().add(m2);
+
+        em.persist(m1);
+        em.persist(m2);
+        em.persist(t1);
+
+        transaction.commit();
+
+        }
 ```
+
 ```sql
 -- 위 코드의 실행 결과 SQL
-insert into Member (MEMBER_ID, username) values(null, ?)
-insert into Member (MEMBER_ID, username) values(null, ?)
-insert into Team (TEAM_ID, name) values (null, ?)
-update Member set TEAM_ID=? where MEMBER_ID=?
-update Member set TEAM_ID=? where MEMBER_ID=?
+insert into Member (MEMBER_ID, username)
+values (null, ?)
+    insert
+into Member (MEMBER_ID, username)
+values (null, ?)
+insert into Team (TEAM_ID, name)
+values (null, ?)
+update Member
+set TEAM_ID=?
+where MEMBER_ID = ?
+update Member
+set TEAM_ID=?
+where MEMBER_ID = ?
 ```
-- Member 엔티티는 Team 엔티티를 모르고 연관관계에 대한 정보는 Team 엔티티의 members가 관리한다. 따라서 Member 엔티티를 저장할 때는 MEMBER 테이블의 TEA_ID 외래 키에 아무 값도 저장되지 않는다. 
+
+- Member 엔티티는 Team 엔티티를 모르고 연관관계에 대한 정보는 Team 엔티티의 members가 관리한다. 따라서 Member 엔티티를 저장할 때는 MEMBER 테이블의 TEA_ID 외래 키에 아무 값도
+  저장되지 않는다.
 - 대신 Team 엔티티를 저장할 때 Team.members의 참조 값을 확인해서 회원 테이블에 있는 TEAM_ID 외래 키를 업데이트 한다.
 
 - **일대다 단방향 보다는 다대일 양방향 매핑을 사용하자**
+
+###### 6.2.2 일대다 양방향
+
+- 일대다 양방향 매핑은 존재하지 않기에 다대일 양방향 매핑을 사용해야 한다.
+    - 더 정확히는 양방향 매핑에서 @OneToMany는 연관관계의 주인이 될 수 없다.
+    - 데이터베이스의 특성상 일대다, 다대일 관계는 항상 다 쪽에 외래 키가 있기 때문에 @OneToMany, @ManyToOne 둘 중에 연관관계의 주인은 항상 다 쪽인 @ManyToOne을 사용한 곳이다.
+
+- 하지만 일대다 양방향 매핑이 완전히 불가능한것은 아니다.
+- 일대다 단방향 매핑 반대편에 같은 외래 키를 사용하는 다대일 단방향 매핑을 읽기 전용으로 하나 추가하면 된다.
+  ![6.4](image/6_4.PNG)
+
+```java
+import javax.annotation.processing.Generated;
+
+@Entity
+public class Team {
+    @Id
+    @GeneratedValue
+    @Column(name = "TEAM_ID")
+    private Long id;
+
+    private String name;
+
+    @OneToMany
+    @JoinColumn(name = "TEAM_ID")
+    private List<Member> members = new ArrayList<Member>();
+}
+```  
+
+```java
+
+@Entity
+public class Member {
+    @Id
+    @GeneratedValue
+    @Column(name = "MEMBER_ID")
+    private Long id;
+    private String username;
+
+    @ManyToOne
+    @JoinColumn(name = "TEAM_ID", insertable = false, updatable = false)
+    private Team team;
+}
+```
