--- a/readme/6.md
+++ b/readme/6.md
@@ -154,3 +154,9 @@ public class Member {
     private Team team;
 }
 ```
+- 일대다 단방향 매핑 반대편에 다대일 매핑을 추가했다.
+- 이때 일대다 단방향 매핑과 같은 TEAM_ID 외래 키 컬럼을 매핑했다. 이렇게 되면 둘 다 같은 키를 관리하므로 문제가 발생할 수 있다.
+  - 반대편인 다대일 쪽은 insertable을 설정해서 오직 읽기만 가능하게 한다.
+  
+- 이 방법은 일대다 단방향 매핑 반대편에 다대일 단방향 매핑을 읽기 전용으로 추가해 일대다 양방향처럼 보이게 하는 방법이다. 즉 일대다 단방향 매핑이 가지는 단점을 그대로 가지고 있다.
+- **될 수 있으면 다대일 양방향 매핑을 사용하자**
