--- a/readme/6.md
+++ b/readme/6.md
@@ -154,9 +154,96 @@ public class Member {
     private Team team;
 }
 ```
+
 - 일대다 단방향 매핑 반대편에 다대일 매핑을 추가했다.
 - 이때 일대다 단방향 매핑과 같은 TEAM_ID 외래 키 컬럼을 매핑했다. 이렇게 되면 둘 다 같은 키를 관리하므로 문제가 발생할 수 있다.
-  - 반대편인 다대일 쪽은 insertable을 설정해서 오직 읽기만 가능하게 한다.
-  
+    - 반대편인 다대일 쪽은 insertable을 설정해서 오직 읽기만 가능하게 한다.
+
 - 이 방법은 일대다 단방향 매핑 반대편에 다대일 단방향 매핑을 읽기 전용으로 추가해 일대다 양방향처럼 보이게 하는 방법이다. 즉 일대다 단방향 매핑이 가지는 단점을 그대로 가지고 있다.
 - **될 수 있으면 다대일 양방향 매핑을 사용하자**
+
+##### 6.3 일대일
+
+- 양쪽이 서로 하나의 관계만 가진다.
+- 일대일 관계의 반대 역시 일대일 관계다
+- 일대일 관계에서는 둘 중 어느 곳이나 외래 키를 가질 수 있다.
+    - 일대일 관계는 주 테이블이나 대상 테이블 중에 누가 외래 키를 가질지 선택해야 한다.
+
+- 주 테이블에 외래 키
+    - 주 객체가 대상 객체를 참조하는 것처럼 주 테이블에 외래 키를 두고 대상 테이블을 참조한다.
+    - 외래 키를 객체 참조와 비슷하게 사용할 수 있어서 객체지향 개발자들이 선호한다.
+    - 이 방법의 장점은 주 테이블이 외래 키를 가지고 있으므로 주 테이블만 확인해도 대상 테이블과 연관관계가 있는지 알 수 있다.
+
+- 대상 테이블에 외래 키
+    - 이 방법의 장점은 테이블 관계를 일애일에서 일대다로 변경할 때 테이블 구조를 그대로 유지할 수 있다는 점이다.
+
+###### 6.3.1 주 테이블에 외래 키
+
+- 객체지향 개발자들은 주 테이블에 외래 키가 있는 것을 선호한다.
+
+**단반향**
+![6.5](image/6_5.PNG)
+
+- 객체 매핑에 @OneToOne을 사용하고 데이터베이스에는 LOCKER_ID 외래 키에 유니크 제약 조건을 추가했다.
+- 다대일 단방향과 거의 비슷하다.
+
+```java
+//주 테이블, 주 객체
+@Entity
+public class Member {
+    @Id
+    @GeneratedValue
+    @Column(name = "MEMBER_ID")
+    private Long id;
+
+    private String username;
+
+    @OneToOne
+    @JoinColumn(name = "LOCKER_ID")
+    private Locker locker;
+}
+
+@Entity
+public class Locker {
+    @Id
+    @GeneratedValue
+    @Column(name = "LOCKER_ID")
+    private Long id;
+
+    private String name;
+}
+```
+
+**양방향**
+![6.6](image/6_6.PNG)
+
+```java
+//주 테이블, 주 객체
+@Entity
+public class Member {
+    @Id
+    @GeneratedValue
+    @Column(name = "MEMBER_ID")
+    private Long id;
+
+    private String username;
+
+    @OneToOne
+    @JoinColumn(name = "LOCKER_ID")
+    private Locker locker;
+}
+
+@Entity
+public class Locker {
+    @Id
+    @GeneratedValue
+    @Column(name = "LOCKER_ID")
+    private Long id;
+
+    private String name;
+
+    @OneToOne(mappedBy = "locker")
+    private Member member;
+}
+```
+- 양방향이므로 연관관계의 주인을 정해야 한다. MEMBER 테이블이 외래 키를 가지고 있으므로 Member 엔티티에 있는 Member.locker가 연관관계의 주인이 된다.
