--- a/readme/6.md
+++ b/readme/6.md
@@ -247,3 +247,6 @@ public class Locker {
 }
 ```
 - 양방향이므로 연관관계의 주인을 정해야 한다. MEMBER 테이블이 외래 키를 가지고 있으므로 Member 엔티티에 있는 Member.locker가 연관관계의 주인이 된다.
+
+###### 6.3.2 대상 테이블에 외래 키
+- 단방향
