--- a/readme/6.md
+++ b/readme/6.md
@@ -250,4 +250,44 @@ public class Locker {
 
 ###### 6.3.2 대상 테이블에 외래 키
 - 단방향
-- 일대일 관계 중 대상 테이블에 외래 키가 있는 단방향 관계는 JPA에서 지원하지 않는다.
+  - 일대일 관계 중 대상 테이블에 외래 키가 있는 단방향 관계는 JPA에서 지원하지 않는다.
+  
+- 양방향
+  - 대상 테이블에 외래 키가 있는 양방향 관계
+  
+![6.8](image/6_8.PNG)
+```java
+//주 테이블, 주 객체
+@Entity
+public class Member {
+    @Id
+    @GeneratedValue
+    @Column(name = "MEMBER_ID")
+    private Long id;
+
+    private String username;
+
+    @OneToOne(mappedBy = "member")
+    private Locker locker;
+}
+
+@Entity
+public class Locker {
+    @Id
+    @GeneratedValue
+    @Column(name = "LOCKER_ID")
+    private Long id;
+
+    private String name;
+
+    @OneToOne
+    @JoinColumn(name = "MEMBER_ID")
+    private Member member;
+}
+```
+- 일대일 매핑에서 대상 테이블에 외래 키를 두고 싶다면 양방향으로 매핑한다.
+- 주 엔티티인 Member 엔티티 대신 대상 엔티티인 Locker 엔티티를 연관관계의 주인으로 만들어 LOCKER 테이블의 외래 키를 관리하도록 한다.
+
+- **프록시를 사용할 때 외래 키를 직접 관리하지 않는 일대일 관계는 지연 로딩으로 설정해도 즉시 로딩된다**
+  - 위의 예시에서 Locker.member는 지연 로딩이 가능하지만 Member.locker는 지연 로딩으로 설정해도 즉시 로딩된다.
+  - 이를 해결하기 위해 프록시 대신 bytecode instrumentation을 사용하면 해결할 수 있다.
