--- a/readme/6.md
+++ b/readme/6.md
@@ -291,3 +291,15 @@ public class Locker {
 - **프록시를 사용할 때 외래 키를 직접 관리하지 않는 일대일 관계는 지연 로딩으로 설정해도 즉시 로딩된다**
   - 위의 예시에서 Locker.member는 지연 로딩이 가능하지만 Member.locker는 지연 로딩으로 설정해도 즉시 로딩된다.
   - 이를 해결하기 위해 프록시 대신 bytecode instrumentation을 사용하면 해결할 수 있다.
+  
+
+##### 6.4 다대다
+- 관계형 데이터 베이스는 정규화된 테이블 2개로 다대다 관계를 표현할 수 없다.
+- 다대다 관계를 일대다, 다대일 관계로 풀어내는 연결 테이블을 사용한다.
+![](image/6_10.PNG)
+  
+- 하지만 객체는 테이블과 갈리 객체 2개로 다대다 관계를 만들 수 있다.
+- 예를 들어 회원 객체를 컬렉션을 사용해서 상품들을 참조하고, 반대로 상품들도 컬렉션을 사용해 회원들을 참조하면 된다.
+
+###### 다대다: 단방향
+- 
