--- a/readme/6.md
+++ b/readme/6.md
@@ -246,16 +246,19 @@ public class Locker {
     private Member member;
 }
 ```
+
 - 양방향이므로 연관관계의 주인을 정해야 한다. MEMBER 테이블이 외래 키를 가지고 있으므로 Member 엔티티에 있는 Member.locker가 연관관계의 주인이 된다.
 
 ###### 6.3.2 대상 테이블에 외래 키
+
 - 단방향
-  - 일대일 관계 중 대상 테이블에 외래 키가 있는 단방향 관계는 JPA에서 지원하지 않는다.
-  
+    - 일대일 관계 중 대상 테이블에 외래 키가 있는 단방향 관계는 JPA에서 지원하지 않는다.
+
 - 양방향
-  - 대상 테이블에 외래 키가 있는 양방향 관계
-  
+    - 대상 테이블에 외래 키가 있는 양방향 관계
+
 ![6.8](image/6_8.PNG)
+
 ```java
 //주 테이블, 주 객체
 @Entity
@@ -285,20 +288,243 @@ public class Locker {
     private Member member;
 }
 ```
+
 - 일대일 매핑에서 대상 테이블에 외래 키를 두고 싶다면 양방향으로 매핑한다.
 - 주 엔티티인 Member 엔티티 대신 대상 엔티티인 Locker 엔티티를 연관관계의 주인으로 만들어 LOCKER 테이블의 외래 키를 관리하도록 한다.
 
 - **프록시를 사용할 때 외래 키를 직접 관리하지 않는 일대일 관계는 지연 로딩으로 설정해도 즉시 로딩된다**
-  - 위의 예시에서 Locker.member는 지연 로딩이 가능하지만 Member.locker는 지연 로딩으로 설정해도 즉시 로딩된다.
-  - 이를 해결하기 위해 프록시 대신 bytecode instrumentation을 사용하면 해결할 수 있다.
-  
+    - 위의 예시에서 Locker.member는 지연 로딩이 가능하지만 Member.locker는 지연 로딩으로 설정해도 즉시 로딩된다.
+    - 이를 해결하기 위해 프록시 대신 bytecode instrumentation을 사용하면 해결할 수 있다.
 
 ##### 6.4 다대다
+
 - 관계형 데이터 베이스는 정규화된 테이블 2개로 다대다 관계를 표현할 수 없다.
 - 다대다 관계를 일대다, 다대일 관계로 풀어내는 연결 테이블을 사용한다.
-![](image/6_10.PNG)
-  
+  ![](image/6_10.PNG)
+
 - 하지만 객체는 테이블과 갈리 객체 2개로 다대다 관계를 만들 수 있다.
 - 예를 들어 회원 객체를 컬렉션을 사용해서 상품들을 참조하고, 반대로 상품들도 컬렉션을 사용해 회원들을 참조하면 된다.
 
 ###### 다대다: 단방향
+
+```java
+
+@Entity
+public class Product {
+    @Id
+    @Column(name = "PRODUCT_ID")
+    private String id;
+
+    private String name;
+}
+```
+
+```java
+
+@Entity
+public class Member {
+
+    @Id
+    @Column(name = "MEMBER_ID")
+    private String id;
+
+    private String username;
+
+    @ManyToMany
+    @JoinTable(name = "MEMBER_PRODUCT",
+            joinColumns = @JoinColumn(name = "MEMBER_ID"),
+            inverseJoinColumns = @JoinColumn(name = "PRODUCT_ID"))
+    private List<Product> products = new ArrayList<Product>();
+}
+```
+
+- 회원 엔티티와 상품 엔티티를 @ManyToMany로 매핑했다.
+    - 여기서 중요한 점은 @ManyToMany와 @JoinTable을 사용해 연결 테이블을 바로 매핑한 것이다. -> 회원과 상품을 연결하는 Member_Product 엔티티 없이 매핑을 완료할 수 있다.
+    - @ManyToMany를 사용해서 매핑을 했기 때문에 연결 테이블을 신경쓰지 않아도 된다.
+
+```java
+public void save(){
+        Product p=new Product();
+        p.setId("p1");
+        p.setName("p1");
+        em.persist(p);
+
+        Member m=new Member();
+        m.setId("m1");
+        m.setUsername("m1");
+        m.getProducts().add(p);
+        em.persist(m);
+        }
+```
+
+- 회원과 상품의 연관관계를 설정했으므로 회원을 저장할 떄 연결 테이블에도 값이 저장된다.
+
+```sql
+INSERT INTO PRODUCT...
+    INSERT INTO MEMBER ...
+INSERT INTO MEMBER_PRODUTC ...
+```
+
+```java
+public void find(){
+        Member member=em.find(Member.class,"member1");
+        List<Product> products=member.getProducts();
+        for(Product p:products){
+        System.out.println(p.getName());
+        }
+        }
+```
+
+```sql
+SELECT *
+FROM MEMBER_PRODUCT MP
+         INNER JOIN PRODUCT P ON MP.PRODUCT_ID = P.PRODUCT_ID
+WHERE MP.MEMBER_ID = ?
+```
+
+- 연결 테이블인 MEMBER_PRODUCT와 상품 테이블을 조인해서 연관된 상품을 조회한다.
+
+###### 6.4.2 다대다:양방향
+
+```java
+
+@Entity
+public class Product {
+    @Id
+    @Column(name = "PRODUCT_ID")
+    private String id;
+
+    @ManyToMany(mappedBy = "products")
+    private List<Member> members;
+
+    private String name;
+}
+```
+
+```java
+
+@Entity
+public class Member {
+
+    @Id
+    @Column(name = "MEMBER_ID")
+    private String id;
+
+    private String username;
+
+    @ManyToMany
+    @JoinTable(name = "MEMBER_PRODUCT",
+            joinColumns = @JoinColumn(name = "MEMBER_ID"),
+            inverseJoinColumns = @JoinColumn(name = "PRODUCT_ID"))
+    private List<Product> products = new ArrayList<Product>();
+}
+```
+
+```java
+//양방향 연관관계는 연관관계 편의 메소드를 추가해서 관리하는 것이 편하다.
+// 다음처럼 회원 엔티티에 연관관계 편의 메소드를 추가하자
+public void addProduct(Product p){
+        products.add(p);
+        p.getMembers().add(this);
+        }
+```
+
+```java
+member.addProduct(product);
+```
+
+```java
+//역방향 탐색
+publid void inverseFind(){
+        Product p=em.find(Product.class,"p1");
+        List<Member> members=p.getMembers();
+        for(Member m:members){
+        System.out.println(m.getUsername());
+        }
+        }
+```
+
+###### 6.4.3 다대다 매핑의 한계, 극복
+
+- 다대다 매핑은 실무에서 사용하기에는 한계가 있다.
+- 회원이 상품을 주문하면 ㅇ녀결 테이블에 단순히 주문한 회원 아이다와 상품 아이디만 담고 끝나는 것이 아닌, 주문 수량과 주문한 날짜 같은 데이터들이 들어갈 컬럼이 필요하다.
+- 필요한 컬럼들을 추가하게 되면 더는 @ManyToMany를 사용할 수 없게 되는데 이는 주문 엔티티나 상품 엔티티에는 추가한 컬럼들을 매핑할 수 없기 때문이다.
+- 결국 연결 테이블을 매핑하는 연결 엔티티를 만들고 이곳에 추가 컬럼들을 매핑한 뒤 일대다, 다대일 관계로 풀어야 한다.
+
+![](image/6_13.PNG)
+![](image/6_12.PNG)
+
+```java
+
+@Entity
+public class Member {
+
+    @Id
+    @Column(name = "MEMBER_ID")
+    private String id;
+
+    private String username;
+
+    @OneToMany(mappedBy = "member")
+    private List<MemberProduct> memberProducts;
+}
+
+```
+
+```java
+
+@Entity
+public class Product {
+    @Id
+    @Column(name = "PRODUCT_ID")
+    private String id;
+
+    private String name;
+}
+```
+
+```java
+//회원상품 엔티티
+@Entity
+@IdClass(MemberProductId.class)
+public class MemberProduct {
+    @Id
+    @ManyToOne
+    @JoinColumn(name = "MEMBER_ID")
+    private Member member;
+
+    @Id
+    @ManyToOne
+    @JoinColumn(name = "PRODUCT_ID")
+    private Product product;
+
+    private int orderAmount;
+}
+```
+
+```java
+import java.io.Serializable;
+
+//회원상품 식별자 클래스
+public class MemberProductId implements Serializable {
+    private String member;
+    private String product;
+
+    @Override
+    public boolean equals(Object o) {...}
+
+    @Override
+    public int hashCode() {...}
+}
+```
+- 회원상품 엔티티는 기본 키가 MEMBER_ID와 PRODUCT_ID로 이루어진 복합 기본키다.
+- JPA 에서 복합키를 사용하려면 별도의 식별자 클래스를 만들어야 한다.
+- 엔티티에 @IdClass를 사용해서 식별자 클래스를 지정하면 된다.
+
+**복합키를 위한 식별자 클래스의 특징**
+1. 복합 키는 별도의 식별자 클래스로 만들어야 한다.
+2. Serializable을 구현해야 한다.
+3. equals와 hashCode를 구현해야 한다.
+4. 기본 생성자가 있어야 한다.
+5. 식별자 클래스는 public이어야 한다.
+6. @IdClass를 사용하는 방법 외에 @EmbeddedId를 사용하는 방법도 있다.
