--- a/readme/6.md
+++ b/readme/6.md
@@ -530,6 +530,6 @@ public class MemberProductId implements Serializable {
 6. @IdClass를 사용하는 방법 외에 @EmbeddedId를 사용하는 방법도 있다.
 
 - 회원 상품은 회원과 상품의 기본 키를 받아서 자신의 기본 키로 사용한다.
-- 부모 테이블의 기본 키를 받아서 자신의 기본 키 + 외래 키로 사용하는 것을 데이터베이스 용어로 **식벽 관계** 라 한다.
+- 부모 테이블의 기본 키를 받아서 자신의 기본 키 + 외래 키로 사용하는 것을 데이터베이스 용어로 **식별 관계** 라 한다.
 
 
